--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Hello world</h1>
+      <h1 class="project-name">Hello world this is my first website!</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/chloebeevers/hello_world" class="btn">View on GitHub</a>
       <a href="https://github.com/chloebeevers/hello_world/zipball/master" class="btn">Download .zip</a>
